<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_9" orientation="portrait" appearance="dark"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Movie Quiz View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MovieQuizViewController" customModule="MovieQuiz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="440" height="956"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="n82-Ci-ljt">
                                <rect key="frame" x="20" y="72" width="400" height="850"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zmf-V5-PxT">
                                        <rect key="frame" x="0.0" y="0.0" width="400" height="24"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вопрос:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1PN-ZO-Lt0" userLabel="Question Title Label">
                                                <rect key="frame" x="0.0" y="0.0" width="364.66666666666669" height="24"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="1/10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4dI-fO-ZSc" userLabel="Index Label">
                                                <rect key="frame" x="364.66666666666669" y="0.0" width="35.333333333333314" height="24"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Index"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GYu-0J-1qD" userLabel="Preview Image">
                                        <rect key="frame" x="0.0" y="44" width="400" height="600"/>
                                        <color key="backgroundColor" name="YP White"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Poster"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="GYu-0J-1qD" secondAttribute="height" multiplier="2:3" id="PfG-fc-Re2"/>
                                        </constraints>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="20"/>
                                            </userDefinedRuntimeAttribute>
                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                        </userDefinedRuntimeAttributes>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cf-49-H8Z" userLabel="Question Label">
                                        <rect key="frame" x="0.0" y="664" width="400" height="106"/>
                                        <string key="text">Рейтинг этого фильма
меньше чем 5?</string>
                                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                        <color key="textColor" name="YP White"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="dwG-Ag-tUD">
                                        <rect key="frame" x="0.0" y="790" width="400" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bVx-M3-hi4" userLabel="No button">
                                                <rect key="frame" x="0.0" y="0.0" width="190" height="60"/>
                                                <color key="backgroundColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="No"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="60" id="M3q-eB-fPx"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Нет">
                                                    <color key="titleColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="20"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5Kb-OT-M9J"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3vj-sv-97d" userLabel="Yes button">
                                                <rect key="frame" x="210" y="0.0" width="190" height="60"/>
                                                <color key="backgroundColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Yes"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Да">
                                                    <color key="titleColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="20"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="yesButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oLs-3a-BFO"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="trailing" secondItem="Zmf-V5-PxT" secondAttribute="trailing" id="0q2-ck-LA7"/>
                                    <constraint firstAttribute="trailing" secondItem="dwG-Ag-tUD" secondAttribute="trailing" id="38c-ed-boX"/>
                                    <constraint firstItem="GYu-0J-1qD" firstAttribute="leading" secondItem="n82-Ci-ljt" secondAttribute="leading" id="6CL-IK-akB"/>
                                    <constraint firstItem="5cf-49-H8Z" firstAttribute="leading" secondItem="n82-Ci-ljt" secondAttribute="leading" id="Djd-la-3Ys"/>
                                    <constraint firstItem="GYu-0J-1qD" firstAttribute="centerX" secondItem="n82-Ci-ljt" secondAttribute="centerX" id="DlW-HC-PVa"/>
                                    <constraint firstItem="dwG-Ag-tUD" firstAttribute="leading" secondItem="n82-Ci-ljt" secondAttribute="leading" id="E7F-z6-gKQ"/>
                                    <constraint firstAttribute="trailing" secondItem="5cf-49-H8Z" secondAttribute="trailing" id="M0R-QI-hkk"/>
                                    <constraint firstAttribute="bottom" secondItem="dwG-Ag-tUD" secondAttribute="bottom" id="REL-qw-lRp"/>
                                    <constraint firstItem="Zmf-V5-PxT" firstAttribute="leading" secondItem="n82-Ci-ljt" secondAttribute="leading" id="ZNX-Yh-GIU"/>
                                    <constraint firstAttribute="trailing" secondItem="GYu-0J-1qD" secondAttribute="trailing" id="fda-Hx-drh"/>
                                    <constraint firstItem="Zmf-V5-PxT" firstAttribute="top" secondItem="n82-Ci-ljt" secondAttribute="top" id="t71-Cv-l0b"/>
                                </constraints>
                            </stackView>
                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="hTk-zx-Jvm">
                                <rect key="frame" x="210" y="482" width="20" height="20"/>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" name="YP Background"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="n82-Ci-ljt" secondAttribute="bottom" id="FLB-R6-IKr"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="n82-Ci-ljt" secondAttribute="trailing" constant="20" id="Gah-fi-UgV"/>
                            <constraint firstItem="n82-Ci-ljt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="Z30-zv-B1g"/>
                            <constraint firstItem="n82-Ci-ljt" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="aZY-b1-hcN"/>
                            <constraint firstItem="hTk-zx-Jvm" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="h7u-9U-bN3"/>
                            <constraint firstItem="hTk-zx-Jvm" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="yB4-le-3Tn"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="activityIndicator" destination="hTk-zx-Jvm" id="V2k-WK-m0z"/>
                        <outlet property="counterLabel" destination="4dI-fO-ZSc" id="mLO-Tk-Sbi"/>
                        <outlet property="imageView" destination="GYu-0J-1qD" id="8Gn-is-zaR"/>
                        <outlet property="noButton" destination="bVx-M3-hi4" id="zbg-fq-pka"/>
                        <outlet property="textLabel" destination="5cf-49-H8Z" id="kJz-5c-9Rh"/>
                        <outlet property="titleTextLabel" destination="1PN-ZO-Lt0" id="qfh-Ew-F21"/>
                        <outlet property="yesButton" destination="3vj-sv-97d" id="6hk-Yp-R3n"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-55.909090909090914" y="55.230125523012553"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="YP Background">
            <color red="0.10196079313755035" green="0.10588234663009644" blue="0.13333332538604736" alpha="0.60000002384185791" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="YP White">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
